compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_record_update_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub type Thing {\n  Thing(value: Int, other: Int)\n}\n\npub fn main() {\n  let thing = Thing(1, 2)\n  Thing(..thing, value: 1)\n  1\n}\n"
---
warning: Unused value
  ┌─ /src/warning/wrn.gleam:8:3
  │
8 │   Thing(..thing, value: 1)
  │   ^^^^^^^^^^^^^^^^^^^^^^^^ This value is never used

Hint: You can safely remove it.
