compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_recursive_function_inside_anonymous_function.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main(x: Int) {\n  let _useless = fn(_) { main(x) }\n  Nil\n}\n"
---
----- SOURCE CODE

pub fn main(x: Int) {
  let _useless = fn(_) { main(x) }
  Nil
}


----- WARNING
warning: Unused function argument
  ┌─ /src/warning/wrn.gleam:2:13
  │
2 │ pub fn main(x: Int) {
  │             ^ This argument is unused

This argument is passed to the function when recursing, but it's never used
for anything.
