compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_string.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n    pub fn main() {\n        \"1\"\n                2\n    }"
---
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:3:9
  │
3 │         "1"
  │         ^^^ This value is never used

Hint: You can safely remove it.
