compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_variable_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  let number = 1\n  number\n  1\n}\n"
---
warning: Unused value
  ┌─ /src/warning/wrn.gleam:4:3
  │
4 │   number
  │   ^^^^^^ This value is never used
