compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_variable_shadowing_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn a() { let b = 1 let b = 2 b }"
---
----- SOURCE CODE
pub fn a() { let b = 1 let b = 2 b }

----- WARNING
warning: Unused variable
  ┌─ /src/warning/wrn.gleam:1:18
  │
1 │ pub fn a() { let b = 1 let b = 2 b }
  │                  ^ This variable is never used

Hint: You can ignore it with an underscore: `_b`.
