compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_variable_warnings_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn a(b) { 1 }"
---
warning: Unused variable
  ┌─ /src/warning/wrn.gleam:1:10
  │
1 │ pub fn a(b) { 1 }
  │          ^ This variable is never used

Hint: You can ignore it with an underscore: `_b`.
