compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__use_with_pure_fn_expression_is_marked_as_unused.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n    {\n        use _ <- fn(a) { a }\n        1\n    }\n\n    Nil\n}\n"
---
----- SOURCE CODE

pub fn main() {
    {
        use _ <- fn(a) { a }
        1
    }

    Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:3:5
  │  
3 │ ╭     {
4 │ │         use _ <- fn(a) { a }
5 │ │         1
6 │ │     }
  │ ╰─────^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.

warning: Immediately called anonymous function
  ┌─ /src/warning/wrn.gleam:4:9
  │  
4 │ ╭         use _ <- fn(a) { a }
5 │ │         1
  │ ╰─────────^ This anonymous function is immediately called

This anonymous function is immediately called. It can be replaced with a
block expression.

Hint: Use a block expression with `let` bindings instead, for example: `{
let a = 1; let b = 2; a + b }`
